# data-practice

./: pyproject.toml
04-Neural-Networks/: main.py
07-Mushrooms/: README.md  eda.ipynb
